# CyborgRobot_v1_archive

./: README.md
Communicational abilities/: README.md
Communicational abilities/CyborgWorkspace/devel/: .catkin  .rosinstall  setup.sh
Communicational abilities/CyborgWorkspace/install/: .rosinstall  _setup_util.py  setup.sh
Communicational abilities/Miscellaneous Software/Comparing Speech Recognition APIs/: speech_recognition_APIs_comparizor.py
Communicational abilities/Miscellaneous Software/Plotting Response Time of The Communication Module/: communication.py  speech_to_text.py
cyborg_estimate_interest/: CMakeLists.txt  Readme.md  package.xml
cyborg_estimate_interest/include/estimate_interest/: Person.h
cyborg_estimate_interest/msg/: PersonArray.msg  PersonInterest.msg
cyborg_estimate_interest/src/: Person.cpp  classifyInterest.cpp  greetingNode.cpp  lookingNode.cpp
cyborg_k2_server/Kinect2Server/: AsyncNetworkConnector.cs  Kinect2ServerService.cs
cyborg_ros_follower/: CMakeLists.txt  README.md  package.xml
cyborg_ros_follower/launch/: standalone  use_coordinator
cyborg_ros_follower/src/: node.cpp
cyborg_ros_k2_client/: README.md
cyborg_ros_k2_client/include/k2_client/: k2_client_startBody.h
cyborg_ros_k2_client/launch/: k2_client.launch
cyborg_ros_k2_client/src/: startBody.cpp  startRGB.cpp
cyborg_ros_selfie/: README.md  Robotarm.ino  arduinoscript.py  facebookupload.py  selfieNode.cpp  take_a_selfie.py  talk_to_troll.py
cyborg_ros_simon_says/: CMakeLists.txt  README.md  package.xml
cyborg_ros_simon_says/include/ntnu_cyborg_simon_says/: console_output.h  event.h  game.h  gestures.h  output.h  troll_output.h
cyborg_ros_simon_says/launch/: standalone  use_coordinator
cyborg_ros_simon_says/src/: console_output.cpp  game.cpp  gestures.cpp  node.cpp  troll_output.cpp
face_recognition/database/: labels.csv  labels.txt
face_recognition/database/s0/: 0.pgm  info.txt
face_recognition/database/s1/: info.txt~
face_recognition/database/s11/: info.txt  info.txt~
face_recognition/database/s13/: info.txt~
face_recognition/database/s14/: info.txt~
face_recognition/database/s15/: info.txt~
face_recognition/database/s16/: info.txt~
face_recognition/database/s17/: info.txt~
face_recognition/database/s18/: info.txt  info.txt~
face_recognition/database/s2/: info.txt~
face_recognition/database/s20/: info.txt  info.txt~
face_recognition/database/s21/: info.txt
face_recognition/database/s22/: info.txt
face_recognition/database/s23/: info.txt
face_recognition/database/s25/: info.txt~
face_recognition/database/s26/: info.txt  info.txt~
face_recognition/database/s27/: info.txt
face_recognition/database/s29/: info.txt  info.txt~
face_recognition/database/s3/: info.txt~
face_recognition/database/s30/: info.txt
face_recognition/database/s32/: info.txt~
face_recognition/database/s33/: info.txt  info.txt~
face_recognition/database/s34/: info.txt
face_recognition/database/s36/: info.txt  info.txt~
face_recognition/database/s37/: info.txt
face_recognition/database/s38/: info.txt
face_recognition/database/s4/: info.txt~
face_recognition/database/s40/: info.txt  info.txt~
face_recognition/database/s5/: info.txt~
face_recognition/database/s6/: info.txt  info.txt~
face_recognition/database/s8/: info.txt~
face_recognition/database/s9/: info.txt  info.txt~
face_recognition/database_manager/: CMakeLists.txt  package.xml
face_recognition/database_manager/scripts/: database_manager_server.py  database_manager_server.py~  database_manager_tester.py
face_recognition/database_manager/srv/: AddPictureOfPerson.srv  AddPictureOfPerson.srv~  ForgetPersonByID.srv~  ShowImage.srv  StorePerson.srv  StorePerson.srv~
face_recognition/facerec/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
face_recognition/facerec/src/: char.pgm  char1.pgm  csv_file_3.txt~  facerec_client.cpp  facerec_client.cpp~  facerec_server.cpp  facerec_server.cpp~  kon.pgm
face_recognition/facerec/srv/: FaceRec.srv  FaceRec.srv~  facerec.srv~
iris/: README.md  servo_test.py
iris/CAD/: HBR8.iam  HBR8x.ipt  Hexagon_socket_set_screw_with_flat_point_DIN_913___M3x3.ipt  MBR18_2_N8.ipt  MBRF28_3_N10.ipt  avstandsstykke.ipt  bakplate.ipt  blad.ipt  innerring.ipt  iris.iam  ledeplate.ipt  motor_trinse.ipt  motorplate.ipt  ytterring.ipt
iris/CAD/2d/: 2d.idw
iris/CAD/AX12/: AX12.iam  ax12_box.ipt  ax12_cog.ipt  ax12_wheel.ipt
iris/IRISkontroller/: Communication.SchDoc  IRISkontroller.OutJob  IRISkontroller.PcbDoc  IRISkontroller.PrjPcb  IRISkontroller.PrjPcbStructure  MCU.SchDoc  Motordriver.SchDoc  Powersupply.SchDoc  Top.SchDoc
iris/IRISkontroller/lib/: 10TPB220ML.SchLib  10TPB33M.SchLib  ATxmega64A4U-AU.SchLib  AX_MX-TTL-CONNECTOR.SchLib  BD6221F.SchLib  BLM18SG331TN1D.SchLib  CAPMP3528X20N.PcbLib  CAPMP7342X30N.PcbLib  DFN540P650X115-3N.PcbLib  DPAK127P1336X457-8N.PcbLib  FT230XS.SchLib  (+20 more)
rosaria_gate_keeper/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
rosaria_gate_keeper/src/: rosaria_gate_keeper_node.cpp  rosaria_gate_keeper_node.cpp~
simpleFacemodule/: CreateDemoNetwork.py  DemonstrationNet.dump  Face.py  GenerateDataSet.py  GeneratePath.py  Readme.txt  Simulator.py
(+47 files in other folders)
