<?xml version="1.0"?>
<package>
  <name>estimate_interest</name>
  <version>1.0.0</version>
  <description>The estimate_interest package</description>


  <maintainer email="havard.svoen@gmail.com">Havard Svoen</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/thentnucyborg/estimateInterest.git</url> 
  <author email="havard.svoen@gmail.com">Havard Svoen</author> 


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend> 
  <build_depend>k2_client</build_depend> 
  <run_depend>message_runtime</run_depend> 
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
