<?xml version="1.0"?>
<package>
  <name>ntnu_cyborg_follower</name>
  <version>0.0.0</version>
  <description>NTNU Cyborg ROS Package: Follower</description>
  <license>TODO</license>
  <url type="website">https://github.com/thentnucyborg/ntnu_cyborg_follower</url>
  <maintainer email="cyborg@ntnu.edu">NTNU Cyborg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosaria</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>k2_client</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ntnu_cyborg_coordinator</build_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>k2_client</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ntnu_cyborg_coordinator</run_depend>
</package>
